# osop-sdk-py

./: .gitignore  README.md  pyproject.toml
.osop/: CONTRIBUTING.osop
osop_sdk/: __init__.py  client.py  models.py  report.py
tests/: test_client.py  test_models.py  test_report.py
