[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osop-sdk"
version = "0.1.0"
description = "Official Python SDK for OSOP — programmatic access to validate, run, render, and test OSOP workflows."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "OSOP Contributors", email = "hello@osop.ai" },
]
keywords = ["osop", "workflow", "sdk", "automation", "sop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://osop.ai"
Repository = "https://github.com/osop/osop-sdk-py"
Issues = "https://github.com/osop/osop-sdk-py/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
